<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.erethon.dungeonsxl</groupId>
    <artifactId>dungeonsxl-parent</artifactId>
    <version>0.19-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>DungeonsXL</name>
    <url>https://dre2n.github.io</url>
    <description>Create custom dungeons and adventure maps with ease!</description>
    <modules>
        <module>adapter</module>
        <module>api</module>
        <module>bukkit_blockdata</module>
        <module>bukkit_magicvalues</module>
        <module>core</module>
        <module>dist</module>
        <!--<module>addon</module>-->
    </modules>
    <properties>
        <buildNo></buildNo>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <spigotVersion.latest>26.1.2-R0.1-SNAPSHOT</spigotVersion.latest>
        <dependencyVersion.xlib>7.0-SNAPSHOT</dependencyVersion.xlib>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.erethon.xlib</groupId>
            <artifactId>xlib-api</artifactId>
            <version>${dependencyVersion.xlib}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>dre-repo</id>
            <url>https://erethon.de/repo</url>
        </repository>
    </repositories>
</project>
